--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_screenutil: 
   flutter_signin_button: 
   firebase_auth: ^0.16.0
+  steel_crypt: ^1.3.1+1
+  cloud_firestore: ^0.13.5
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,10 +66,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Angelina
+      fonts:
+        - asset: assets/fonts/Angelina.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
