--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^0.16.0
   steel_crypt: ^1.3.1+1
   cloud_firestore: ^0.13.5
+  shared_preferences: ^0.5.7
   
 
   # The following adds the Cupertino Icons font to your application.
