--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,8 +65,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.android.gms:play-services-basement:17.5.0'
-
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
 }
