--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   steel_crypt: ^1.3.1+1
   cloud_firestore: ^0.13.5
   shared_preferences: ^0.5.7
+  agora_rtc_engine: ^3.2.1
   
 
   # The following adds the Cupertino Icons font to your application.
