--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   cloud_firestore: ^0.13.5
   shared_preferences: ^0.5.7
   agora_rtc_engine: ^3.2.1
+  file_picker: ^1.4.0+1
+  emoji_picker: ^0.0.2
+  video_player: ^0.10.2+1
+  flutter_downloader: ^1.2.2
+  downloads_path_provider: ^0.1.0
+  flushbar: ^1.9.0
   
 
   # The following adds the Cupertino Icons font to your application.
