--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   flutter_downloader: ^1.2.2
   downloads_path_provider: ^0.1.0
   flushbar: ^1.9.0
+  permission_handler: ^3.0.0
+  image_picker: ^0.6.3+1
+  path_provider: ^1.6.0
+  firebase_storage: ^3.1.1
+  image: ^2.1.19
+  fluttertoast: ^7.1.8
   
 
   # The following adds the Cupertino Icons font to your application.
