--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^3.1.1
   image: ^2.1.19
   fluttertoast: ^7.1.8
+  bubble: ^1.1.9+1
   
 
   # The following adds the Cupertino Icons font to your application.
